Login screen UI changes fixed

--- a/src/app/inbox/item-views/list-view.scss
+++ b/src/app/inbox/item-views/list-view.scss
@@ -81,7 +81,7 @@ $ca-text-editor-bg: #b2b2b2;
   cursor: pointer;
 }
 .active {
-  background-color: red;
+  background-color: #EAEAEA;
 }
 .disabled {
   color: gray;
