--- a/src/app/share/components/date-picker/mydatepicker.css
+++ b/src/app/share/components/date-picker/mydatepicker.css
@@ -1,8 +1,9 @@
 .mydp {
-    min-width: 100px;
+    min-width: 80px;
     border-radius: 2px;
     line-height: 1.1;
     display: inline-block;
+    width: 80px;
 }
 
 .mydp * {
