creatin of contract  while creating customer.

--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -23,7 +23,7 @@
     <template md-tab label="Content">
       <md-content class="md-padding">
 
-        <p [innerHTML]="email.html"></p>
+        <p [innerHTML]="email.html" class="client-conversation"></p>
 
 
         <div *ngFor="#message of email.conversation">
