--- a/src/app/order/components/preview-order.component.html
+++ b/src/app/order/components/preview-order.component.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <div class="order-details">
+  <div class="order-details" style="height: auto">
     <div layout="row" layout-wrap class="row-title">
       <div flex="50">
         Product
