--- a/src/app/share/components/header.component.html
+++ b/src/app/share/components/header.component.html
@@ -1,4 +1,5 @@
 <div class="top-header" flex layout="row" *ngIf="access_token">
+  <h1 class="logo"><img src="app/share/images/logo.png"></h1>
   <button md-button class="md-icon-button" aria-label="Profile" (click)="open('left')"  hide-gt-md>
     <i md-icon>menu</i>
   </button>
