--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -18,10 +18,10 @@
       <md-list layout="column" layout-align="end end">
         <md-list-item class="md-3-line col-order-detail">
           <div class="md-list-item-text">
-            <h3>Order Date : <my-date-picker [options]="myDatePickerOptions"
+            <h3><span>Order Date :</span> <my-date-picker [options]="myDatePickerOptions"
                                              (dateChanged)="onDate1Changed($event)"
                                              [selDate]="selectedDate1"></my-date-picker></h3>
-            <h3>Delivery Date : <my-date-picker [options]="myDatePickerOptions"
+            <h3><span>Delivery Date :</span> <my-date-picker [options]="myDatePickerOptions"
                                              (dateChanged)="onDate2Changed($event)"
                                              [selDate]="selectedDate2"></my-date-picker></h3>
           </div>
