--- a/src/app/share/components/date-picker/mydatepicker.css
+++ b/src/app/share/components/date-picker/mydatepicker.css
@@ -3,7 +3,7 @@
     border-radius: 2px;
     line-height: 1.1;
     display: inline-block;
-    width: 80px;
+    width: 84px !important;
 }
 
 .mydp * {
@@ -16,15 +16,16 @@
 }
 
 .mydp .selector {
-    margin-top: 2px;
-    margin-left: -1px;
+    margin-top: 22px;
+    margin-left: -22px;
     position: absolute;
     max-width: 262px;
-    padding: 3px;
+    padding: 0px;
     border-radius: 2px;
     background-color: #DDD;
     z-index: 100;
     left: 0px;
+    right: 16px;
 }
 
 .mydp .selectiongroup {
@@ -40,9 +41,9 @@
     position: absolute;
     width: 100%;
     text-align: left;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 0 64px 0 4px;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 0 80px 0 4px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -57,6 +58,7 @@
     display: table-cell;
     text-align: right;
     font-size: 0;
+    display: none;
 }
 
 .mydp .btnpicker,
@@ -127,7 +129,7 @@
 
 .mydp .caltable th,
 .mydp .caltable td {
-    padding: 5px;
+    /*padding: 5px;*/
     text-align: center;
 }
 
@@ -170,6 +172,7 @@
     background-color: #f36523 !important;
     border-radius: 0;
     color: #fff;
+    padding: 7px;
 }
 
 .mydp .caltable tbody .currmonth:hover {
@@ -189,7 +192,7 @@
 }
 
 .mydp,
-.mydp .selector,
+
 .mydp .header,
 .mydp .footerarea,
 .mydp .table,
