--- a/src/app/inbox-app.html
+++ b/src/app/inbox-app.html
@@ -1,9 +1,9 @@
 <div layout="row">
-  <md-sidenav-container layout="row" flex="10" hide show-gt-lg layout-align="center center">
+<!--   <md-sidenav-container layout="row" flex="10" hide show-gt-lg layout-align="center center">
     <md-sidenav class="leftnav" name="left" [style]="hasMedia('gt-md') ? 'side' : 'over'">
       <ib-left-nav>Left Navigation</ib-left-nav>
     </md-sidenav>
-  </md-sidenav-container>
+  </md-sidenav-container> -->
 
   <md-content flex>
 
