--- a/src/app/share/components/left-navigation.component.html
+++ b/src/app/share/components/left-navigation.component.html
@@ -1,18 +1,11 @@
 <div class="leftarea" layout="column" layout-align="center center" *ngIf="access_token">
   <h1><img class="logo" src="app/share/images/logo.png"></h1>
-  <!--<h2 layout-align="center center" layout="row" layout-fill layout-padding><img src="app/share/images/profile.png"></h2>-->
-  <h3 layout-align="center center" layout="row" layout-fill layout-padding>Comfort Agencies </h3>
-  <md-list-item >
-    <img src="app/share/images/profile.jpg" class="md-avatar"  >
-  </md-list-item>
-  <h3 layout-align="center center" layout="row" layout-fill layout-padding>Welcome Parag </h3>
-  <button md-raised-button class="md-raised md-warn" flex="50" >New Order</button>
 
   <ul layout-margin layout-fill>
-    <li class="selected" [routerLink]="['/Inbox']" layout="" [class.selected]="selected === 'Inbox' "  (click)="select('Inbox')">
+    <!-- <li class="selected" [routerLink]="['/Inbox']" layout="" [class.selected]="selected === 'Inbox' "  (click)="select('Inbox')">
       <img src="app/share/images/orders_left.svg" width="20" height="20" layout-padding>
       <h3 layout-padding layout-fill>My Orders</h3>
-    </li>
+    </li> -->
     <li [routerLink]="['/UserAccount']" layout="" [class.selected]="selected === 'UserAccount' "  (click)="select('UserAccount')">
       <img src="app/share/images/user.svg" width="20" height="20" layout-padding>
       <h3 layout-padding layout-fill>User Account</h3>
@@ -24,18 +17,18 @@
         <span class="count">11</span>
       </button>
     </li>
-    <li [routerLink]="['/Products']" layout="" [class.selected]="selected === 'Products' "  (click)="select('Products')">
+<!--     <li [routerLink]="['/Products']" layout="" [class.selected]="selected === 'Products' "  (click)="select('Products')">
       <img src="app/share/images/products.svg" width="20" height="20" layout-padding>
       <h3 layout-padding layout-fill>Products</h3>
     </li>
     <li [routerLink]="['/Customer']" layout="" [class.selected]="selected === 'Customer' " (click)="select('Customer')">
       <img src="app/share/images/customer.svg" width="20" height="20" layout-padding>
       <h3 layout-padding layout-fill>Customer</h3>
-    </li>
-    <li layout="" [class.selected]="selected === 'Logout' "  (click)="select('Logout'); logout()">
+    </li> -->
+   <!--  <li layout="" [class.selected]="selected === 'Logout' "  (click)="select('Logout'); logout()">
       <img src="app/share/images/logout.svg" width="20" height="20" layout-padding>
       <h3 layout-padding layout-fill>Logout</h3>
-    </li>
+    </li> -->
   </ul>
 </div>
 
